@@ -1,7 +1,7 @@
 ---
 abstract: 'Base class for pod_example script.'
 author:
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   English: 0
   ExtUtils::MakeMaker: 6.59
