@@ -55,12 +55,12 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/App-Pod-Example>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2020 Michal Špaček
+     © 2011-2020 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
